# otus_ner_primary_doc

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/interim/: extra  patterns.xlsx  wikiann.py  wikiann_local.py
data/processed/: df_test.xlsx  test1_ner_tag_companies_and_banks.xlsx  test1_patterns.xlsx  test2_ner_tag_companies_and_banks.xlsx  test2_patterns.xlsx  train_patterns.xlsx
data/processed/train_data/: default.tar.xz  dev  extra  test
data/processed/train_data_100K_IP_O_95f1_org_99acc/: описание.txt
data/raw/: df_banks_unique_1354.xlsx
deploy/ws_ld_bert/: requirements.txt  web-service.py
deploy/ws_ld_bert/src/: ner.py  ner_pipeline.py  ner_tokens_tags.py  ner_tokens_tags_pipeline.py
notebooks/: ORG_parser.ipynb  Param_optimization.ipynb  apply_ner_torch_model.ipynb  dataset_discover.ipynb  dataset_prepare.ipynb  make_test_exaples.ipynb  make_train_test.ipynb  model_output_detokenize.ipynb  Дообучение__Bert_NER_.ipynb
notebooks/.ipynb_checkpoints/: F - мера-checkpoint.ipynb  ORG_parser-checkpoint.ipynb  dataset_prepare-checkpoint.ipynb  make_test_exaples-checkpoint.ipynb  Дообучение__Bert_NER_-checkpoint.ipynb
notebooks/runs/May28_11-40-30_akhmadiev-ld/: events.out.tfevents.1622194656.akhmadiev-ld.28093.0
notebooks/runs/May28_13-40-48_akhmadiev-ld/: events.out.tfevents.1622194940.akhmadiev-ld.28093.2
src/: __init__.py  generate_tag_value.py  ner.py  ner_pipeline.py  ner_statistic.py  ner_test.py  ner_tokens_tags.py  ner_tokens_tags_pipeline.py  ner_tokens_tags_pipeline_ip_o.py  service_settings.py  web_verifier.py  wikiann_local.py
(+10 files in other folders)
