[tool.poetry]
name = "otus-ner-primary-doc"
version = "0.1.0"
description = ""
authors = ["akhmadiev <akhmadiev@tax-monitor.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.3"
fuzzywuzzy = "^0.18.0"
numpy = "^2.5.1"
ipymarkup = "^0.9.0"
regex = "^2026.6.28"
waitress = "^3.0.2"
datasets = "^5.0.0"
fuzzysearch = "^0.8.1"
ipython = "^9.15.0"
transformers = "^5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
